Added Security Window Toolbar
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7796 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-ar.xml
+++ b/Languages/default-ar.xml
@@ -4559,7 +4559,7 @@
       <column from="G1-ID" to="" />
     </list>
     <list name="CSearchMonitorWnd">
-      <column from="بحث" to="بحث" />
+      <column from="Search" to="بحث" />
       <column from="URN" to="" />
       <column from="Schema" to="مخطط" />
     </list>
