--- a/Languages/default-gr.xml
+++ b/Languages/default-gr.xml
@@ -3244,7 +3244,7 @@
 	<string id="20001" value="Κλείσιμο"/>
 	<string id="20002" value="από"/><!-- e.g. 1 of 10 -->
 	<string id="20003" value="Η αλλαγή της κατεύθυνσης χρειάζεται επανεκκίνηση.\nΘα χρειαστεί να εκκινήσετε το Shareaza χειροκίνητα. Έξοδος;"/>
-	<string id="20004" value="Οι γλώσσες right-to-left δεν υποστηρίζονται από το Λειτουργικό σας."/>
+	<string id="20004" value="Άκυρο"/>
 	<string id="20005" value="Όχι"/>
 	<string id="20006" value="Ναι"/>
 	<string id="20007" value="Αυτόματα"/>
