--- a/Languages/default-ca.xml
+++ b/Languages/default-ca.xml
@@ -3122,7 +3122,7 @@
 	<string id="20001" value="Tanca"/>
 	<string id="20002" value="de"/><!-- e.g. 1 of 10 -->
 	<string id="20003" value="El canvi de direcció de la interfície requereix un reinici de l'aplicació. \nVols sortir ara? (Necessitaràs tornar a inciar Shareaza manualment)"/>
-	<string id="20004" value="Els llenguatges amb lectura de dreta a esquerra no estan suportats al seu sistema operatiu."/>
+	<string id="20004" value="Cancel·la"/>
 	<string id="20005" value="No"/>
 	<string id="20006" value="Sí"/>
 	<string id="20007" value="Automàtic"/>
@@ -3131,6 +3131,7 @@
 	<string id="20010" value="&amp;Torna enrere"/>
 	<string id="20011" value="&amp;Següent"/>
 	<string id="20012" value="Finalitza"/>
+	<string id="20013" value="Todo"/>
 	<string id="20100" value="Connectant"/>
 	<string id="20101" value="Demanant"/>
 	<string id="20102" value="Resposta"/>
