--- a/Languages/default-de.xml
+++ b/Languages/default-de.xml
@@ -3218,7 +3218,7 @@
 	<string id="20001" value="Schließen"/>
 	<string id="20002" value="von"/>
 	<string id="20003" value="Der Wechsel der Schreibrichtung erfordert einen Neustart. \nJetzt beenden?"/>
-	<string id="20004" value="Rechts-nach-links Schreibrichtung wird von Ihrem Betriebssystem nicht unterstützt."/>
+	<string id="20004" value="Abbrechen"/>
 	<string id="20005" value="Nein"/>
 	<string id="20006" value="Ja"/>
 	<string id="20007" value="Auto"/>
