--- a/Languages/default-en.xml
+++ b/Languages/default-en.xml
@@ -3262,7 +3262,7 @@
 	<string id="20001" value="Close"/>
 	<string id="20002" value="of"/><!-- e.g. 1 of 10 -->
 	<string id="20003" value="Changing interface direction requires restart. \nYou will need to start Shareaza manually. Exit now?"/>
-	<string id="20004" value="Right-to-left languages are not supported in your OS."/>
+	<string id="20004" value="Cancel"/>
 	<string id="20005" value="No"/>
 	<string id="20006" value="Yes"/>
 	<string id="20007" value="Auto"/>
