--- a/Languages/default-heb.xml
+++ b/Languages/default-heb.xml
@@ -3239,7 +3239,7 @@ PDF
 	<string id="20001" value="Close"/>
     <string id="20002" value="מתוך"/><!-- e.g. 1 of 10 -->
 	<string id="20003" value="Changing interface direction requires restart. \nYou will need to start Shareaza manually. Exit now?"/>
-	<string id="20004" value="Right-to-left languages are not supported in your OS."/>
+	<string id="20004" value="ביטול"/>
 	<string id="20005" value="לא"/>
 	<string id="20006" value="כן"/>
 	<string id="20007" value="אוטומטי"/>
