--- a/Languages/default-hu.xml
+++ b/Languages/default-hu.xml
@@ -3190,7 +3190,7 @@
 	<string id="20001" value="Bezárás"/>
 	<string id="20002" value="/"/><!-- e.g. 1 of 10 -->
 	<string id="20003" value="A szövegirány megváltoztatásához újra kell indítani a programot. \nEzt kézzel kell megtennie. Be akarja most zárni a Shareazát?"/>
-	<string id="20004" value="Az ön operációs rendszere nem támogatja a jobbról balra való írásmódot."/>
+	<string id="20004" value="Mégse"/>
 	<string id="20005" value="Nem"/>
 	<string id="20006" value="Igen"/>
 	<string id="20007" value="Auto"/>
