--- a/Languages/default-lt.xml
+++ b/Languages/default-lt.xml
@@ -3244,7 +3244,7 @@
 	<string id="20001" value="Užverti"/>
 	<string id="20002" value="iš"/>
 	<string id="20003" value="Sąsajos krypties pakeitimui reikalinga startuoti iš naujo. \nJums reikės paleisti „Shareaza“ programą rankiniu būdu. Ar baigti darbą dabar?"/>
-	<string id="20004" value="Jūsų operacinė sistema nepalaiko kalbų su rašmenimis iš dešinės į kairę."/>
+	<string id="20004" value="Atšaukti"/>
 	<string id="20005" value="Ne"/>
 	<string id="20006" value="Taip"/>
 
