--- a/Languages/default-nl.xml
+++ b/Languages/default-nl.xml
@@ -3167,7 +3167,7 @@
 	<string id="20001" value="Sluiten"/>
 	<string id="20002" value="van"/><!-- e.g. 1 of 10 -->
 	<string id="20003" value="Veranderen van leesrichting vereist het heropstarten van Shareaza.\nJe zal Shareaza zelf opnieuw moeten starten. Nu afsluiten?"/>
-	<string id="20004" value="Rechts-naar links talen worden niet ondersteund door dit besturingssysteem."/>
+	<string id="20004" value="Annuleren"/>
 	<string id="20005" value="Nee"/>
 	<string id="20006" value="Ja"/>
 	<string id="20007" value="Auto"/>
