--- a/Languages/default-pl.xml
+++ b/Languages/default-pl.xml
@@ -3237,7 +3237,7 @@
 	<string id="20001" value="Zamknij"/>
 	<string id="20002" value="z"/><!-- e.g. 1 of 10 -->
 	<string id="20003" value="Changing interface direction requires restart. \nYou will need to start Shareaza manually. Exit now?"/>
-	<string id="20004" value="Right-to-left languages are not supported in your OS."/>
+	<string id="20004" value="Anuluj"/>
 	<string id="20005" value="Nie"/>
 	<string id="20006" value="Tak"/>
 	<string id="20007" value="Auto"/>
