Added new OK/Cancel translation to all languages
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7800 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-ca.xml
+++ b/Languages/default-ca.xml
@@ -3192,6 +3192,8 @@
 	<string id="20234" value="Àlbum"/>
 	<string id="20235" value="Artista"/>
 	<string id="20236" value="Valoració"/>
+	<string id="20237" value="Accepta"/>
+	<string id="20238" value="Cancel·la"/>
 </strings>
 <!-- Localised Dialog Text, the "cookie" verifies that the dialog matches the skin -->
 <dialogs>
