--- a/Languages/default-fr.xml
+++ b/Languages/default-fr.xml
@@ -3304,6 +3304,8 @@
 	<string id="20234" value="Album"/>
 	<string id="20235" value="Artiste"/>
 	<string id="20236" value="Évaluation"/>
+	<string id="20237" value="Valider"/>
+	<string id="20238" value="Annuler"/>
 </strings>
 <!-- Localised Dialog Text, the "cookie" verifies that the dialog matches the skin -->
 <!-- Don't edit dialogs manualy! Use DialogScan feature instead -->
