--- a/Languages/default-hu.xml
+++ b/Languages/default-hu.xml
@@ -3260,6 +3260,8 @@
 	<string id="20234" value="Album"/>
 	<string id="20235" value="Előadó"/>
 	<string id="20236" value="Osztályzat"/>
+	<string id="20237" value="OK"/>
+	<string id="20238" value="Mégse"/>
 </strings>
 <!-- Localised Dialog Text, the "cookie" verifies that the dialog matches the skin -->
 <!-- Don't edit dialogs manualy! Use DialogScan feature instead -->
