--- a/Languages/default-nl.xml
+++ b/Languages/default-nl.xml
@@ -3237,6 +3237,8 @@
 	<string id="20234" value="Album"/>
 	<string id="20235" value="Artiest"/>
 	<string id="20236" value="Beoordeling"/>
+	<string id="20237" value="OK"/>
+	<string id="20238" value="Annuleren"/>
 </strings>
 <!-- Localised Dialog Text, the "cookie" verifies that the dialog matches the skin -->
 <dialogs>
