--- a/Languages/default-pl.xml
+++ b/Languages/default-pl.xml
@@ -3307,6 +3307,8 @@
 	<string id="20234" value="Album"/>
 	<string id="20235" value="Wykonawca"/>
 	<string id="20236" value="Ocena"/>
+	<string id="20237" value="OK"/>
+	<string id="20238" value="Anuluj"/>
 </strings>
 <!-- Localised Dialog Text, the "cookie" verifies that the dialog matches the skin -->
 <dialogs>
