--- a/Languages/default-af.xml
+++ b/Languages/default-af.xml
@@ -3286,6 +3286,8 @@
 	<string id="20234" value="Album"/>
 	<string id="20235" value="Artist"/>
 	<string id="20236" value="Rating"/>
+	<string id="20237" value="OK"/>
+	<string id="20238" value="Kanselleer"/>
 </strings>
 <!-- Localised Dialog Text, the "cookie" verifies that the dialog matches the skin -->
 <!-- Don't edit dialogs manualy! Use DialogScan feature instead -->
