--- a/Languages/default-chs.xml
+++ b/Languages/default-chs.xml
@@ -3202,6 +3202,8 @@
 	<string id="20214" value="较好"/>
 	<string id="20215" value="很好"/>
 	<string id="20216" value="极棒"/>
+	<string id="20237" value="确定"/>
+	<string id="20238" value="取消"/>
 </strings>
 
 <!-- Localised Dialog Text, the "cookie" verifies that the dialog matches the skin -->
