--- a/Languages/default-cz.xml
+++ b/Languages/default-cz.xml
@@ -3189,6 +3189,8 @@
 	<string id="20234" value="Album"/>
 	<string id="20235" value="Autor"/>
 	<string id="20236" value="Hodnocení"/>
+	<string id="20237" value="OK"/>
+	<string id="20238" value="Zrušit"/>
 </strings>
 <!-- Localised Dialog Text, the "cookie" verifies that the dialog matches the skin -->
 <dialogs>
