--- a/Languages/default-es-mx.xml
+++ b/Languages/default-es-mx.xml
@@ -3216,6 +3216,8 @@
 	<string id="20234" value="Album"/>
 	<string id="20235" value="Artista"/>
 	<string id="20236" value="Ratio"/>
+	<string id="20237" value="Aceptar"/>
+	<string id="20238" value="Cancelar"/>
 </strings>
 
 <!-- Localised Dialog Text, the "cookie" verifies that the dialog matches the skin -->
