--- a/Languages/default-es.xml
+++ b/Languages/default-es.xml
@@ -3200,6 +3200,8 @@ Puede comenzar a transferir en cualquier momento.</text>
 	<string id="20234" value="Album"/>
 	<string id="20235" value="Artista"/>
 	<string id="20236" value="Ratio"/>
+	<string id="20237" value="Aceptar"/>
+	<string id="20238" value="Cancelar"/>
 </strings>
 <!-- Localised Dialog Text, the "cookie" verifies that the dialog matches the skin -->
 <dialogs>
