--- a/Languages/default-it.xml
+++ b/Languages/default-it.xml
@@ -3259,6 +3259,8 @@
 	<string id="20234" value="Album"/>
 	<string id="20235" value="Artista"/>
 	<string id="20236" value="Valutazione"/>
+	<string id="20237" value="OK"/>
+	<string id="20238" value="Annulla"/>
 </strings>
 <!-- Localised Dialog Text, the "cookie" verifies that the dialog matches the skin -->
 <dialogs>
