--- a/Languages/default-tr.xml
+++ b/Languages/default-tr.xml
@@ -3286,6 +3286,8 @@
 	<string id="20234" value="Albüm"/>
 	<string id="20235" value="Sanatçı"/>
 	<string id="20236" value="Reyting"/>
+	<string id="20237" value="Tamam"/>
+	<string id="20238" value="İptal"/>
 </strings>
 <!-- Localised Dialog Text, the "cookie" verifies that the dialog matches the skin -->
 <!-- Don't edit dialogs manualy! Use DialogScan feature instead -->
