Added IRC to Windowed 'View' Menu
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7835 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-de.xml
+++ b/Languages/default-de.xml
@@ -681,6 +681,7 @@
 			<item id="ID_VIEW_UPLOADS" text="_Uploads" shortcut="F4"/>
 			<item id="ID_VIEW_LIBRARY" text="_Bibliothek" shortcut="F5"/>
 			<item id="ID_VIEW_MEDIA" text="_Medienwiedergabe" shortcut="F6"/>
+			<item id="ID_TAB_IRC" text="Internet Relay _Chat (IRC)" shortcut="F12"/>
 			<separator/>
 			<item id="ID_VIEW_SECURITY" text="S_icherheit" shortcut="F7"/>
 			<item id="ID_VIEW_HOSTS" text="_Host-Cache" shortcut="F8"/>
