*** Warning *** Incompatable with downloads used with r7924 or newer (so finish your downloads before upgrading if your using these versions). Update version number for saved bittorrent info in .sd files, due to changed file format in r7924. Fix torrent downloads broken by r7924, upgrades torrent to new file system on first run. Add progress dialog box. VS8: Upgrade project file to use new files introduced in r7931.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7934 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-en.xml
+++ b/Languages/default-en.xml
@@ -3240,6 +3240,8 @@
 	<string id="17511" value="BitTorrent coupling with %s not accepted, maximum connections reached."/>
 	<string id="17512" value="Private torrent"/>
 	<string id="17513" value="Encoding error"/>
+	<string id="17514" value="Updating Bittorrent Downloads..."/>
+	<string id="17515" value="Converting Torrent:"/>
 	<string id="18496" value="You have made changes to the name field. Are you sure you want to rename this download?"/>
 	<string id="18497" value="You have typed a SHA1 value, however it is invalid. Please check it and try again."/>
 	<string id="18498" value="You have typed a root tiger-tree value, however it is invalid. Please check it and try again."/>
