Fixed Albanian Translation Loading
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8037 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-sq.xml
+++ b/Languages/default-sq.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 
 <!-- Shareaza Default Albanian Skin File -->
 <!-- Translation based on default-en.xml SVN rev.7800 -->
@@ -1454,7 +1454,7 @@
 	</menu>
 	<!-- SYSTEM WINDOW -->
 	<menu name="CSystemWnd">
-		<menu id="ID_SYSTEM_VERBOSE" text="Mjaft të _Dhëna"/>
+		<menu id="ID_SYSTEM_VERBOSE" text="Mjaft të _Dhëna">
 			<item id="ID_SYSTEM_VERBOSE_ERROR" text="_Gabim"/>
 			<item id="ID_SYSTEM_VERBOSE_WARNING" text="_Kujdes"/>
 			<item id="ID_SYSTEM_VERBOSE_NOTICE" text="_Lajmërim"/>
